# Quantum_Key_Distribution

./: .gitignore  README.md  analyzer.py  pyproject.toml  simulation.ini  simulator.py
docs/: API_documentation.md  README_given.md
qcs/: README.md  __init__.py  __main__.py  config.ini
qcs/model/: block.py
sae/: README.md  __init__.py  __main__.py  external_api.py  sae_app.py  strings.py  utils.py
sae/configs/: __init__.py  config.ini  configs.py
sae/model/: ask_connection.py  errors.py  ksids.py  open_session.py
sae/routers/: ask_close_connection.py  ask_connection.py  ask_key.py  assign_ksid.py  debugging_start_connection.py
sd_qkd_node/: README.md  __init__.py  __main__.py  external_api.py  kme_app.py  strings.py  utils.py
sd_qkd_node/channel/: qc_server.py
sd_qkd_node/configs/: __init__.py  config.ini  configs.py
sd_qkd_node/database/: __init__.py  db.py  dbms.py
sd_qkd_node/info/: link_info.py
sd_qkd_node/model/: __init__.py  errors.py  exchange_key.py  key_container.py  key_relay.py  new_app.py  new_kme.py  new_link.py  open_session.py  status.py
sd_qkd_node/tests/: __init__.py  conftest.py  examples.py  test_utils.py
sdn_controller/: README.md  __init__.py  __main__.py  encoder.py  external_api.py  sdn_app.py  strings.py  utils.py
sdn_controller/configs/: __init__.py  config.ini  configs.py
sdn_controller/database/: __init__.py  db.py  dbms.py
sdn_controller/info/: network_info.py
sdn_controller/model/: errors.py  new_app.py  new_kme.py  new_link.py
sdn_controller/routers/: close_connection.py  (+4 more)
stubs/: jsons.pyi  uvicorn.pyi
(+25 files in other folders)
